syntax = "proto3";
package jarviscrawlercore;

enum OABTResType {
    OABTRT_ED2K = 0;
    OABTRT_MAGNET = 1;
}

// OABT Resource infomation
message OABTResInfo {
    OABTResType type = 1;
    string url = 2;
}

// OABT Node
message OABTNode {
    // fullname
    string fullname = 1;
    // name - name.chs name.eng
    map<string, string> name = 2;
    // resource id
    string resid = 3;

    // lst
    repeated OABTResInfo lst = 10;
}

// OABTMode - oabt mode
enum OABTMode {
    // OABTM_PAGE - page
    OABTM_PAGE = 0;
}

message OABTPage {
    repeated OABTNode lst = 1;
}

// RequestOABT - request oabt
message RequestOABT {
    OABTMode mode = 1;
    int32 pageIndex = 2;
}

// ReplyOABT - reply oabt
message ReplyOABT {
    OABTMode mode = 1;

    oneof reply {
        OABTPage page = 100;
    }
}